Health regenerates slower Fixed weapons being dropped when they shouldn't Fixed not slowing down when shot in the legs language.Add()'s Other bug fixes
git-svn-id: http://ambdevteam.googlecode.com/svn/trunk@27 1e2648ae-0935-11df-a26f-8b716316a5bc

--- a/AmBFightToSurvive/TODO.txt
+++ b/AmBFightToSurvive/TODO.txt
@@ -14,22 +14,22 @@ end
 
 
 Healp menu.
-Create a teams system with team management (Similar to GG Stranded).
+Create a teams system with team management (Similar to GG Stranded). Porgress: Team management & GUI left
 Buy weapons system.
 Quota for props system (Rather than a prop count).
 	Unfrozen props cost more.
 	Bigger props cost more. -- maybe not
 	Parented props cost nothing.
-Slow player down when fell from height.
 Help screen.
 Bleedout when health < 10.
 	Last attacker gets the kill.
 Screen blood effects when damaged/shot.
-language.Add()'s e.g. "Slipt And Fell"
 Killable inside pod.
 
 DONE:
 
+language.Add()'s e.g. "Slipt And Fell"
+Slow player down when fell from height.
 Add classes to spawn with.
 Headshots kill instantly.
 Drop weapon when shot in hand when health < 50.
