--- a/AmBFightToSurvive/TODO.txt
+++ b/AmBFightToSurvive/TODO.txt
@@ -12,8 +12,7 @@ for _, v in pairs ( ents.FindByClass( "npc_*" ) ) do --For all NPC's...
 end
 ----------
 
-
-Healp menu.
+Get ScaleDamageHook working again!
 Create a teams system with team management (Similar to GG Stranded). Porgress: Team management & GUI left
 Buy weapons system.
 Quota for props system (Rather than a prop count).
