Things to do for Fight To Survive 2 Plan
git-svn-id: http://ambdevteam.googlecode.com/svn/trunk@46 1e2648ae-0935-11df-a26f-8b716316a5bc

--- a/AmBFightToSurvive/TODO.txt
+++ b/AmBFightToSurvive/TODO.txt
@@ -9,6 +9,8 @@ Quota for props system (Rather than a prop count).
 	OR
 	Resource capture limit to decide how many props
 	Trade resources in for money
+	Resource furnace to make recorces, cache to store them.
+		Other teams can steal recources
 Help screen.
 Killable inside pod.
 
